Hidden the category button for USERS, now it only displays for ADMINS, -minor improvements

--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -22,6 +22,8 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\LoginFormAuthenticator
+            entry_point: App\Security\AuthenticationEntryPoint
+            access_denied_handler: App\Security\AccessDeniedHandler
             logout:
                 path: app_logout
                 # where to redirect after logout
@@ -42,6 +44,8 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/login, roles: PUBLIC_ACCESS}
+        - { path: ^/task, roles: PUBLIC_ACCESS }
+        - { path: ^/category, roles: ROLE_ADMIN }
         - { path: ^/, roles: ROLE_USER}
 
 when@test:
