--Cleaned every unnecessary file, --Updated entities based on my database, --Fixed few bugs, --*overall the project is mostly finished, but still does require quite a bit of work and polishing, but other than that it is perfectly fine to be used :)

--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -44,11 +44,11 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/login, roles: PUBLIC_ACCESS}
-        - { path: '^/task$', roles: PUBLIC_ACCESS }
-        - { path: '^/task/create$', roles: ROLE_ADMIN }
-        - { path: '^/task/[1-9]+$', roles: PUBLIC_ACCESS }
-        - { path: '^/task/[1-9]+/edit$', roles: ROLE_ADMIN }
-        - { path: '^/task/[1-9]+/delete$', roles: ROLE_ADMIN }
+        - { path: ^/bug$, roles: PUBLIC_ACCESS }
+        - { path: ^/bug/create$, roles: ROLE_ADMIN }
+        - { path: ^/bug/[1-9]+$, roles: PUBLIC_ACCESS }
+        - { path: ^/bug/[1-9]+/edit$, roles: ROLE_ADMIN }
+        - { path: ^/bug/[1-9]+/delete$, roles: ROLE_ADMIN }
         - { path: ^/category/[ 1-9 ]*, roles: ROLE_ADMIN }
         - { path: ^/category, roles: PUBLIC_ACCESS }
         - { path: ^/change-email, roles: ROLE_ADMIN }
